<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_map" android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/map" />
        <item android:id="@+id/nav_myEvents" android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/hosting" />
        <item android:id="@+id/nav_eventsAttend" android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/attending" />
        <item android:id="@+id/nav_settings" android:icon="@android:drawable/ic_menu_help"
            android:title="@string/settings" />
        <item android:id="@+id/nav_logout" android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/logout" />
    </group>
</menu>